# async-hwi

./: Cargo.toml  README.md
.github/actions/setup-bitcoind/: action.yml
.github/actions/setup-coldcard-sim/: action.yml
.github/actions/setup-hwi-rs/: action.yml
.github/actions/setup-ledger-speculos/: action.yml
.github/workflows/: main.yml
coldcard-vendored/: Cargo.toml
coldcard-vendored/examples/: smoke_simulator.rs
coldcard-vendored/src/: constants.rs  lib.rs  protocol.rs  transport.rs  util.rs
coldcard-vendored/src/protocol/: derivation_path.rs
hwi-rs/: Cargo.toml  README.md  USAGE.md
hwi-rs/src/: cli.rs  descriptor.rs  main.rs  policy.rs
hwi-rs/src/commands/: displayaddress.rs  enumerate.rs  getdescriptors.rs  getxpub.rs  mod.rs  register.rs  signtx.rs
hwi-rs/src/devices/: coldcard.rs  dispatch.rs  ledger.rs  mock.rs  mod.rs
hwi-rs/tests/: coldcard-signer.sh  kumbaya-signer.sh  lib-musig.sh  mock-signer.sh  run-core-scenario-coldcard.sh  run-core-scenario-speculos.sh  run-core-scenario.sh  run-musig-disconnect-scenario-speculos.sh  run-musig-kumbaya-scenario.sh  run-musig-scenario-coldcard.sh  run-musig-scenario-speculos.sh  run-musig-timelock-scenario-speculos.sh  speculos-signer-disconnectable.sh  speculos-signer.sh
hwi-rs/tests/coldcard-sim/: Dockerfile  README.md  build.sh  firmware-tag.txt
src/: ledger.rs
tests/: ledger_speculos.rs
