[package]
name = "hwi-rs"
description = "Bitcoin Core compatible external-signer (HWI-style) CLI built on async-hwi"
version = "0.0.1"
license-file.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "hwi-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
bitcoin = { version = "0.32", features = ["base64", "serde", "std"] }
miniscript = { version = "12", features = ["std"] }
async-hwi = { path = "..", version = "0.0.31", default-features = false, features = ["ledger", "coldcard"] }
hidapi = { version = "2.5.1", features = ["linux-static-hidraw"], default-features = false }
shell-words = "1"
